<resources>
    <string name="app_name">testCFT</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- TODO: MainFragment -->
    <string name="icon_update_items">Update_items</string>
    <string name="title_main_fragment">Random People</string>
    <!-- TODO: SelectFragment -->
    <string name="title_second_fragment">Select people</string>
    <string name="FirstName">First Name</string>
    <string name="MiddleName">Middle Name</string>
    <string name="LastName">Last Name</string>
    <string name="email">Email</string>
    <string name="phone">Number phone</string>
    <string name="latitude">Shirota</string>
    <string name="longitude">Dolgota</string>
    <string name="address">Address</string>



</resources>